erDiagram
    COURSES ||--o{ STUDENTS : "enrolls"
    COURSES ||--o{ SUBJECTS : "offers"
    STUDENTS ||--o| USERS : "logs in as"
    STUDENTS ||--o{ STUDENT_SUBJECT_ALLOTMENT : "is allotted"
    SUBJECTS ||--o{ STUDENT_SUBJECT_ALLOTMENT : "allotted to"
    SUBJECTS ||--o{ QUESTIONS : "has bank of"
    SUBJECTS ||--o{ EXAMS : "scheduled for"
    STUDENTS ||--o{ EXAM_ATTEMPTS : "attempts"
    EXAMS ||--o{ EXAM_ATTEMPTS : "attempted in"
    EXAM_ATTEMPTS ||--o{ EXAM_ANSWERS : "contains"
    QUESTIONS ||--o{ EXAM_ANSWERS : "drawn into"

    COURSES {
        bigint id PK
        varchar course_name
    }
    STUDENTS {
        bigint id PK
        varchar reg_no
        varchar name
        bigint course_id FK
        int semester
        varchar email
        varchar mobile
        text photo_url
    }
    USERS {
        bigint id PK
        varchar username
        varchar password_hash
        enum role
        boolean must_change_password
        bigint student_id FK
    }
    SUBJECTS {
        bigint id PK
        varchar subject_code
        varchar subject_name
        bigint course_id FK
        int semester
        int total_marks
        int passing_marks
        int duration_minutes
    }
    STUDENT_SUBJECT_ALLOTMENT {
        bigint id PK
        bigint student_id FK
        bigint subject_id FK
    }
    QUESTIONS {
        bigint id PK
        bigint subject_id FK
        text question_text
        varchar option_a
        varchar option_b
        varchar option_c
        varchar option_d
        enum correct_option
        int marks
    }
    EXAMS {
        bigint id PK
        bigint subject_id FK
        timestamp start_time
        timestamp end_time
        int duration_minutes
        int total_questions
    }
    EXAM_ATTEMPTS {
        bigint id PK
        bigint student_id FK
        bigint exam_id FK
        timestamp started_at
        timestamp expires_at
        timestamp submitted_at
        enum status
        int total_score
    }
    EXAM_ANSWERS {
        bigint id PK
        bigint attempt_id FK
        bigint question_id FK
        enum selected_option
        boolean is_correct
    }
